src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Advertiser)</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>( AmountWonOpportunities -  ActualCost ) /  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI is the return on investment or net gain.  This is a sample formula field that calculates (TOTAL VALUE WON OPPORTUNITIES - ACTUAL COST) / ACTUAL COST</inlineHelpText>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Success_Rating_Information__c</fullName>
        <label>Campaign Success Rating Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Success_Rating__c</fullName>
        <label>Campaign Success Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Main_Category__c</fullName>
        <description>Used to define the Main Classified Category for the campaign</description>
        <label>Classified Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Digital Agency)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Main_Category__c</fullName>
        <label>Display Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Marketing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will allow each campaign to be assigned to a specific member of the marketing team. This is different role to the &apos;Campaign Owner&apos; who will always be a sales person</description>
        <label>Internal Marketing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_New_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Press_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Press Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Press Agency)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proactive_Reactive__c</fullName>
        <label>Proactive/Reactive?</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_New_Campaigns_Created_In_The_Last_30</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All New Campaigns Created In The Last 30</label>
        <sharedTo>
            <roleAndSubordinates>MailClassified</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Education_Careers_etc_Features</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classified_Main_Category__c</field>
            <operation>contains</operation>
            <value>Business &amp; Finance,Education,Personal &amp; Notices,Recruitment</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Daily Mail Features 2013-2014</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>TMOS features 2013-2014</value>
        </filters>
        <label>Business Education Careers etc Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedDepartmentHead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Events_2013_2014</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Mail Classified Events 2013-2014</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/30/2013</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>9/28/2014</value>
        </filters>
        <label>Mail Class: Events 2013-2014</label>
        <sharedTo>
            <roleAndSubordinates>MailClassified</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedOperationsManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Mail_on_Sunday_Features</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>TMOS</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/30/2013</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>9/28/2014</value>
        </filters>
        <label>Mail Class: TMOS Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassified</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Marketing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2012</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>9/29/2013</value>
        </filters>
        <label>Mail Class: Marketing Campaigns</label>
        <sharedTo>
            <roleAndSubordinates>MailClassified</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Marketing_Contact_Adam</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Marketing_Contact__c</field>
            <operation>equals</operation>
            <value>Adam Lawrence</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Mail Class: Marketing Contact - Adam</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedMarketingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Marketing_Contact_Mark</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Marketing_Contact__c</field>
            <operation>equals</operation>
            <value>Mark Mahoney</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Mail Class: Marketing Contact - Mark</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedMarketingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Marketing_Contact_Tom</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_Marketing_Contact__c</field>
            <operation>equals</operation>
            <value>Tom Iddon</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Mail Class: Marketing Contact - Tom</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedMarketingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Class_Scottish_Daily_Mail_Features</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Scottish,Scotland</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/18/2013</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessThan</operation>
            <value>9/28/2014</value>
        </filters>
        <label>Mail Class: Scottish Daily Mail Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassified</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mail_Order_Property_H_G_Features</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classified_Main_Category__c</field>
            <operation>contains</operation>
            <value>Homes &amp; Gardens,Mail Order,Motors,Property Overseas,Property UK</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Daily Mail Features 201302014</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>TMOS features 2013-2014</value>
        </filters>
        <label>Mail Order, Property, H&amp;G Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedDepartmentHead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Health_Features</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Classified_Main_Category__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classified_Main_Category__c</field>
            <operation>contains</operation>
            <value>Health,Mobility</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>TMOS features 2013-2014</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Daily Mail Features 2013-2014</value>
        </filters>
        <label>Mobility &amp; Health Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedDepartmentHead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Travel_Overseas_Features</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classified_Main_Category__c</field>
            <operation>equals</operation>
            <value>Travel Overseas</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Daily Mail Features 2013-2014</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>TMOS features 2013-2014</value>
        </filters>
        <label>Travel Overseas Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedDepartmentHead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Travel_UK_Features</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Internal_Marketing_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classified_Main_Category__c</field>
            <operation>equals</operation>
            <value>Travel UK</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>TMOS features 2013-2014</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Daily Mail Features 2013-2014</value>
        </filters>
        <label>Travel UK Features</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedDepartmentHead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trading</fullName>
        <active>true</active>
        <label>Trading</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>